# NSE_AGENT_o

./: .gitignore  README.md  baseline_done.flag  dashboard_api.py  main.py  package-lock.json  package.json  pipeline.py  pyproject.toml  status.md  test-sse-server.mjs  test_connection_database.py
Dataextraction/: Parsing.py
Datapulling/: announcements_nse.py
Execution/: __init__.py  newsextractor.py  schemas.py  token_tracker.py
Frontend/: .gitignore  package-lock.json  package.json  vite.config.js
Frontend/src/: App.css  App.jsx  index.css
Frontend/src/components/: FeedItem.jsx  Navbar.jsx  StatusBar.jsx  StockChart.jsx  TickerMarquee.jsx
Frontend/src/hooks/: useNewsFeed.js  useStockSearch.js  useWatchlist.js
Frontend/src/lib/: useFilingStream.js
Frontend/src/pages/: AuthPage.jsx  CompanyFundamentals.jsx  Dashboard.jsx  Tradingviewchart.jsx  Watchlist.jsx
