[project]
name = "nse-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "curl-cffi>=0.15.0",
    "dotenv>=0.9.9",
    "frontend>=0.0.3",
    "httpx>=0.28.1",
    "pdfplumber>=0.11.10",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "requests>=2.34.2",
]
