[project]
name = "nse-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.15.0",
    "curl-cffi>=0.15.0",
    "dotenv>=0.9.9",
    "fastapi>=0.138.0",
    "frontend>=0.0.3",
    "httpx>=0.28.1",
    "pdfplumber>=0.11.10",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "requests>=2.34.2",
    "supabase>=2.0.0",
    "uvicorn>=0.49.0",
    "yfinance>=1.4.1",
]
